--- a/index.html
+++ b/index.html
@@ -5,39 +5,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <title>Portfolio</title>
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="restaurant.css">
 </head>
 
 <body>
-    <div class="container-fluid banner p-0">
-        <div class="row">
-            <div class="col-md-12">
-                <nav class="navbar  navbar-md bg-warning m-0 sticky-top">
-                    <div class="navbar-brand text-primary">
-                        Bootstrap 4
+    <nav class="navbar  bg-warning m-0 sticky-top navbar-expand-sm navbar-light">
+        <div class="container">
+
+                <div class="navbar-brand text-primary mr-md-5">
+                    Bootstrap 4
+                </div>
+
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="nucampNavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link  text-secondary font-weight-bold px-md-4 px-l-5" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-secondary font-weight-bold  px-md-4 px-l-5" href="#">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-secondary font-weight-bold  px-md-4 px-l-5" href="#">About</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link text-secondary font-weight-bold pl-md-4 px-l-5" href="#">Contact</a>
+                            </li>
+                        </ul>
                     </div>
-                    <ul class="nav">
-                        <li class="nav-item">
-                            <a class="nav-link  text-secondary font-weight-bold" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary font-weight-bold" href="#">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary font-weight-bold" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary font-weight-bold" href="#">Contact</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+
+        </div>
+    </nav>
+    <div class="container-fluid banner">
+        <div class="row">
+
+            
             <div class="col-md-8 offset-md-2 info">
-                <h1 id="bootstrapAppear" class="transition text-center changeBsColor">Bootstrap 4</h1>
+                <h1 id="bootstrapAppear" class="transition text-center changeBsColor ">Bootstrap 4</h1>
                 <p id="willAppear" class="text-center">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, corrupti.
                 </p>
@@ -109,6 +122,11 @@
 
 
     <script src="js/main.js"></script>
+        <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
