fix images at bottom position

--- a/index.html
+++ b/index.html
@@ -100,21 +100,23 @@
         </div>
     </section>
     <!-- portfolio section -->
-    <div class="portfolio">
+    <div class="portfolio p-0">
         <h1 class="text-center">Restaurants</h1>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-sm-12 col-md-4">
+            <div class="row justify-content-around">
+                <!-- justify-content-around -->
+                <div class="col-sm-12 col-md-4 col-lg-3 my-2">
                     <img src="https://images.pexels.com/photos/8352396/pexels-photo-8352396.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-                        class="img-fluid col-sm-8 col-md-12">
+                        class="img-fluid">
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="col-sm-12 col-md-4 col-lg-3 my-2 ">
                     <img src="https://images.pexels.com/photos/1639557/pexels-photo-1639557.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-                    class="img-fluid col-sm-8 col-md-12">
+                    class="img-fluid">
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="col-sm-12 col-md-4 col-lg-3 my-2">
                     <img src="https://images.pexels.com/photos/3616956/pexels-photo-3616956.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-                    class="img-fluid col-sm-8 col-md-12">
+                    class="img-fluid ">
+                    <!--  col-sm-8 col-md-12-->
                 </div>
             </div>
         </div>
@@ -145,7 +147,7 @@
   
           <!-- Content -->
           <h5 class="text-uppercase font-weight-bold">William Knight</h5>
-          <p>Self Taught Developer from Indiana. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, provident.</p>
+          <p>Self Taught Developer from Indiana. Currently enrolled in Full Stack Web and Mobile at Nucamp.</p>
   
         </div>
         <!-- Grid column -->
